[package]
name = "ixirc-api"
version = "0.1.0"
authors = ["Andrew Slater <adslater@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeptohttpc = { version = "0.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
